--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.bt1 {
-    background-color: #390082;
-    color: aliceblue;
-    border-radius: 30px;
-    width: 80px;
-    height: 30px;
-}
-
 #bg1 {
 
     width: 100%;
@@ -24,7 +16,6 @@
     top: 160px;
     font-family: 'Lobster', cursive;
     color: white;
-
 }
 
 .txt1 h1 {
@@ -40,4 +31,24 @@
     height: 40px;
     left: 120px;
     top: 290px;
+}
+
+.txt2 {
+    margin-top: 100px;
+    font-family: 'Nerko One', cursive;
+    color: black;
+    font-size: 45px;
+}
+#img1{
+    width: 100px;
+    height: 100px;
+}
+#txt3{
+    font-family: 'Nerko One', cursive;
+    color: rgb(101, 37, 153);
+}
+#img2{
+    margin-top: 120px;
+    width: 400px;
+    height: 400px;
 }
