--- a/style2.css
+++ b/style2.css
@@ -40,14 +40,24 @@
 }
 
 #txt4 {
+    margin-top: 30px;
     text-align: center;
     font-family: 'Fredoka One', cursive;
     font-family: 'Nerko One', cursive;
     font-size: 30px;
 }
 #img2 {
+    margin-top: 30px;
     text-align: center;
     width: 50px;
     height: 50px;
   
+}
+#bu1{
+    margin-top: 30px;
+    text-align: center;
+    font-family: 'Fredoka One', cursive;
+    font-family: 'Nerko One', cursive;
+    font-size: 30px;
+    background-color: #390082;
 }
